--- a/app/src/main/res/layout/fragment_set_time.xml
+++ b/app/src/main/res/layout/fragment_set_time.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    tools:context="project.farmpar.SetTimeFragment">
+    tools:context="project.farmpar.FirstPlant.SetTimeFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
