--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -53,17 +53,16 @@
                 android:id="@+id/nav_tankset"
                 android:icon="@drawable/pset"
                 android:title="Pond Set" />
-            <item
-                android:id="@+id/nav_setting"
-                android:icon="@drawable/settings"
-                android:title="Setting" />
 
 
         </menu>
+        <menu>
 
-        <item
-            android:id="@+id/setting"
-            android:icon="@drawable/ic_settings_black_24dp"
-            android:title="@string/Settings" />
+            <item
+                android:id="@+id/setting"
+                android:icon="@drawable/ic_settings_black_24dp"
+                android:title="@string/Settings" />
+        </menu>
+
     </group>
 </menu>
