--- a/app/src/main/res/layout/activity_dialog.xml
+++ b/app/src/main/res/layout/activity_dialog.xml
@@ -12,6 +12,15 @@
         android:scaleType="center"
         app:srcCompat="@mipmap/ic_launcher" />
 
+    <Spinner
+        android:id="@+id/t_spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginTop="16dp" />
+
     <EditText
         android:id="@+id/farmname"
         android:layout_width="match_parent"
