--- a/app/src/main/res/layout/dialog_spinner.xml
+++ b/app/src/main/res/layout/dialog_spinner.xml
@@ -5,7 +5,15 @@
     android:padding="20dp">
 
     <Spinner
+        android:id="@+id/spinner_type"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="20dp"/>
+    <Spinner
         android:id="@+id/spinner"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:padding="20dp"/>
+
+
 </LinearLayout>
