--- a/app/src/main/res/layout/fragment_wauto.xml
+++ b/app/src/main/res/layout/fragment_wauto.xml
@@ -21,7 +21,7 @@
             android:id="@+id/textViewAIrrigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView"
+            android:text="Loading..."
             android:textAlignment="center"
             android:textSize="24sp"
             android:layout_above="@+id/btn_AIStatus"
