--- a/app/src/main/res/layout/fragment_set_time.xml
+++ b/app/src/main/res/layout/fragment_set_time.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    tools:context="project.farmpar.FirstPlant.SetTimeFragment">
+    tools:context="project.firstplant.SetTimeFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -22,60 +22,67 @@
             android:numbersSelectorColor="@color/green" />
 
         <TextView
-            android:id="@+id/TextViewSetTime1"
+            android:id="@+id/TextViewSetTime"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
-            android:layout_weight="0.37"
+            android:layout_marginBottom="5dp"
             android:text="Loading..."
             android:textAlignment="center"
-            android:textSize="24sp" />
+            android:textSize="24sp"
+            android:layout_weight="0.37" />
 
-        <TextView
-            android:id="@+id/TextViewSetTime2"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/textInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_weight="0.37"
-            android:text="Loading..."
-            android:textAlignment="center"
-            android:textSize="24sp" />
+            android:layout_above="@+id/timePicker"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/start"
-                android:layout_width="wrap_content"
+            <EditText
+                android:id="@+id/et_STFertilization"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@color/green"
-                android:text="@string/Set1"
-                android:textColor="@android:color/white" />
+                android:hint="Volume in milliliter"
+                android:inputType="number"
+                android:textAlignment="center" />
 
-            <Button
-                android:id="@+id/alarm2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@android:color/holo_orange_light"
-                android:text="@string/Set2"
-                android:textColor="@color/colorWhite" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/stop"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@android:color/holo_red_dark"
-                android:text="@string/Cancel"
-                android:textColor="@android:color/white" />
+                <Button
+                    android:id="@+id/start"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@color/green"
+                    android:text="@string/Set1"
+                    android:textColor="@android:color/white" />
 
-        </LinearLayout>
+                <Button
+                    android:id="@+id/alarm2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@android:color/holo_orange_light"
+                    android:text="@string/Set2"
+                    android:textColor="@color/colorWhite" />
+
+                <Button
+                    android:id="@+id/stop"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@android:color/holo_red_dark"
+                    android:text="@string/Cancel"
+                    android:textColor="@android:color/white" />
+
+            </LinearLayout>
+
+        </android.support.design.widget.TextInputLayout>
 
     </LinearLayout>
 
