--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,42 +1,24 @@
 <resources>
 
     <!-- Base application theme. -->
-
-    <style name="AppTheme1" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/bblue</item>
-        <item name="colorPrimaryDark">@android:color/background_dark</item>
+        <item name="colorPrimaryDark">@color/bblue</item>
         <item name="colorAccent">@color/colorPrimaryDark</item>
-    </style>
-    <style name="AppTheme1.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
-
-    <style name="AppTheme1.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <style name="AppTheme1.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
-
-    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/bblue</item>
-        <item name="colorPrimaryDark">@android:color/background_dark</item>
-        <item name="colorAccent">@color/colorPrimaryDark</item>
-        <item name="android:colorBackground">@color/colorWhite</item>
-        <item name="android:colorForeground">@color/colorBlack</item>
-        <item name="android:textColorPrimary">@color/colorWhite</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-    </style>
+    </style> <style name="AppTheme1.NoActionBar">
+    <item name="windowActionBar">false</item>
+    <item name="windowNoTitle">true</item>
+</style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
     <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowBackground">@drawable/background_splash</item>
     </style>
@@ -44,10 +26,17 @@
     <style name="SendFabTheme" parent="AppTheme">
         <item name="colorAccent">@color/colorForeground</item>
     </style>
+    <style name="MyThemeNoActionbar" parent="AppTheme">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+    </style>
 
     <style name="EditTextTintTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="colorPrimaryDark">#0288D1</item>
     </style>
+
+
 
     <style name="TextLabel" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
@@ -64,10 +53,12 @@
     </style>
 
     <style name="TranslucentBackground" parent="Theme.AppCompat.Light.NoActionBar">
-    <item name="windowNoTitle">true</item>
-    <item name="colorPrimary">#03A9F4</item>
-    <item name="colorPrimaryDark">#FFCC00</item>
-    <item name="colorAccent">#4fa881</item>
-    <item name="android:windowBackground">@drawable/bgc</item>
+        <item name="windowNoTitle">true</item>
+        <item name="colorPrimary">#03A9F4</item>
+        <item name="colorPrimaryDark">#FFCC00</item>
+        <item name="colorAccent">#4fa881</item>
+        <item name="android:windowBackground">@drawable/bg</item>
     </style>
+
+    <style name="AppTheme1" parent="AppTheme" />
 </resources>
