--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -21,7 +21,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/logo"
         android:layout_marginTop="23dp"
-        android:text="Aquaponics System"
+        android:text="Farm Par"
         android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="24sp"
@@ -57,7 +57,7 @@
     </com.wajahatkarim3.easyflipview.EasyFlipView>
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/descipt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -65,7 +65,7 @@
         android:layout_below="@+id/textView"
 
         android:layout_marginTop="22dp"
-        android:text="an application for fertilization and irrigation control with information of weather and growth conditions."
+        android:text="An application for fertilization and control with essential weather and nurturing information"
         android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="18sp" />
