--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -13,4 +13,10 @@
         android:title="@string/action_exit"
         app:showAsAction="ifRoom" />
 
+    <item
+        android:id="@+id/action_about"
+        android:orderInCategory="100"
+        android:title="About"
+        app:showAsAction="never" />
+
 </menu>
