--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -9,6 +9,5 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/bg"
-        android:id="@+id/imageView2" />
+        android:id="@+id/banner" />
 </LinearLayout>
