--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,20 +3,30 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/action_select"
+        android:icon="@drawable/ic_loop_white_24dp"
+        android:title="Change"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/action_chat"
         android:icon="@drawable/ic_chat_white_24dp"
         android:title="@string/action_chat"
-        app:showAsAction="ifRoom" />
-    <item
-        android:id="@+id/action_exit"
-        android:icon="@drawable/ic_exit_to_app_white_24dp"
-        android:title="@string/action_exit"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/action_about"
         android:orderInCategory="100"
         android:title="License Agreement"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_signout"
+        android:orderInCategory="200"
+        android:title="@string/SignOut"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_exit"
+        android:orderInCategory="300"
+        android:title="@string/action_exit"
         app:showAsAction="never" />
 
 </menu>
