--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -3,8 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/grey_50"
     android:orientation="vertical"
-    android:background="@android:color/white">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -14,13 +18,13 @@
             android:id="@+id/Tset"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_above="@+id/select"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="54dp"
             android:text="Controller ID"
             android:textAllCaps="true"
             android:textColor="@color/colorBlack"
-            android:textSize="24sp"
-            android:layout_marginBottom="54dp"
-            android:layout_above="@+id/select"
-            android:layout_centerHorizontal="true" />
+            android:textSize="24sp" />
 
         <Button
             android:id="@+id/select"
@@ -54,7 +58,6 @@
             android:layout_gravity="bottom|end"
             android:src="@drawable/add"
             app:backgroundTint="@color/colorPrimary" />
-
 
 
     </RelativeLayout>
