--- a/app/src/main/res/layout/fragment_set_time.xml
+++ b/app/src/main/res/layout/fragment_set_time.xml
@@ -2,8 +2,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
-    tools:context="project.firstplant.SetTimeFragment">
+    android:background="@color/grey_50"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <!-- TODO: Update blank fragment layout -->
 
